# dae-cpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_static_lib.sh  clang-tidy.sh  set_MKL_env  set_MKL_env_win.bat  test.sh  test_single.sh
.github/workflows/: cmake-multi-platform.yml
Eigen/src/Core/: Matrix.h  PlainObjectBase.h
Eigen/src/Core/arch/AVX/: PacketMath.h  TypeCasting.h
Eigen/src/Core/arch/AVX512/: PacketMath.h
Eigen/src/Core/arch/SSE/: PacketMath.h
archived/: CMakeLists.txt  clang-tidy.sh
archived/examples/diffusion_2d/: diffusion_2d.cpp  diffusion_2d_RHS.cpp
archived/examples/perovskite/: perovskite.cpp  perovskite_Jacobian.cpp  perovskite_Jacobian.h  perovskite_Mass.cpp  perovskite_Mass.h  perovskite_RHS.cpp
archived/examples/simple_dae/: simple_dae.cpp
archived/examples/two_bodies/: two_bodies.cpp
archived/src/: CMakeLists.txt  RHS.h  cmake_config.h  jacobian.h  mass_matrix.cpp  matrix_add.cpp  matrix_checker.cpp  solver.cpp  solver.h  solver_options.cpp  solver_options.h  time_stepper.cpp
archived/vscode_old/: settings.json  tasks.json
autodiff/common/: classtraits.hpp  meta.hpp
dae-cpp/: RHS.hpp  assert-custom.hpp  jacobian-matrix.hpp  jacobian.hpp  mass-matrix.hpp  observer.hpp  rhs.hpp  solution-manager.hpp  solver-options.hpp  solver.hpp  sparse-matrix.hpp  timer.hpp  typedefs.hpp  vector-function.hpp  version.hpp
examples/diffusion_2d/: diffusion_2d.cpp  diffusion_2d_RHS.cpp  diffusion_2d_RHS.h
examples/flame_propagation/: flame_propagation.cpp
examples/jacobian_compare/: jacobian_compare.cpp
examples/jacobian_matrix_shape/: jacobian_matrix_shape.cpp
examples/jacobian_shape/: jacobian_shape.cpp
examples/perovskite/: perovskite.cpp  perovskite_Jacobian.cpp  perovskite_Jacobian.h  perovskite_Mass.cpp  perovskite_Mass.h  perovskite_RHS.cpp  perovskite_RHS.h  perovskite_observer.h  perovskite_parameters.h
examples/perovskite_model/: perovskite.cpp
examples/quick_start/: quick_start.cpp
examples/robertson/: robertson.cpp
examples/simple_dae/: perovskite.cpp  simple_dae.cpp  test_dae.cpp
examples/two_bodies/: two_bodies.cpp
src/: CMakeLists.txt  RHS.h  cmake_config.h.in  debug_output.cpp  jacobian.cpp  jacobian.h  mass_matrix.cpp  mass_matrix.h  matrix_add.cpp  matrix_checker.cpp  matrix_converter.cpp  solver.cpp  solver.h  solver_options.cpp  solver_options.h  time_integrator.cpp  time_integrator.h  time_stepper.cpp  typedefs.h
tests/: test_integration-algebraic.cpp  test_integration-flame_propagation.cpp  test_integration-jacobian_shape.cpp  test_integration-ode.cpp  test_integration-perovskite_model.cpp  test_integration-quick_start.cpp  test_integration-simple_dae.cpp  test_jacobian-compare.cpp  test_jacobian-matrix.cpp  test_jacobian-shape.cpp  test_jacobian.cpp  test_linear-solver.cpp  test_mass-matrix.cpp  test_rhs.cpp  test_solution-manager.cpp  test_solver-convergence.cpp  test_solver-defs.cpp  test_solver-options.cpp  test_sparse-matrix.cpp  test_time-integrator.cpp  test_time-stepper.cpp  test_vector-function.cpp
